# 2023-test-assignment-an-adtech-company

./: .env.example  Cargo.toml  LICENCE  README.md  justfile
docker/: .env.db  db.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_initialize.rs
src/: lib.rs  main.rs
src/adapters/api/: dto_entity_mapper.rs  mod.rs
src/adapters/api/index/: index_controller.rs  mod.rs
src/adapters/api/request/: mod.rs  request_controller.rs
src/adapters/api/request_group/: mod.rs  request_group_controller.rs
src/adapters/api/shared/: app_data.rs  error.rs  mod.rs  routes.rs
src/adapters/spi/db/: db_connection.rs  db_model_entity_mapper.rs  mod.rs
src/adapters/spi/http/: dtos.rs  http_bin_entity_mapper.rs  http_bin_repository.rs  mod.rs
src/application/: mod.rs
src/application/repositories/: db_request_group_repository.rs  db_request_repository.rs  http_bin_repository.rs  mod.rs
src/application/use_cases/: mod.rs  store.rs  use_case.rs
src/application/use_cases/index/: mod.rs  run_use_case.rs  store.rs
src/application/use_cases/request/: mod.rs  request_create_use_case.rs  request_delete_by_id_use_case.rs  request_get_all_use_case.rs  request_get_by_id_use_case.rs  request_update_use_case.rs  store.rs
src/application/use_cases/request_group/: mod.rs  (+6 more)
src/domain/: mod.rs  types.rs
src/domain/entities/: mod.rs  request.rs  request_group.rs
src/infrastructure/: env_config.rs  http_server.rs  mod.rs
src/infrastructure/middlewares/: http_authentication_middleware.rs  mod.rs
src/shared/utils/: datetime.rs
tests/: mod.rs  utils.rs
(+14 files in other folders)
