[package]
name = "test_assignment_2023_adtech_company"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "request_api"
path = "src/main.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[features]
default = ["integration_tests"]
integration_tests = []

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }

actix-web = "4.4.0"
fastrand = "2.0.1"
futures = "0.3.29"
reqwest = { version = "0.11.22", features = ["json"] }
sea-orm = { version = "0.12.4", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12.4"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tokio = "1.33.0"
uuid = { version = "1.5.0", features = ["v4"] }
chrono = "0.4.31"
num-traits = "0.2.17"
pretty_assertions = "1.4.0"
async-trait = "0.1.74"
thiserror = "1.0.50"
eyre = "0.6.8"
actix-web-httpauth = "0.8.1"
dotenv = "0.15.0"
envy = "0.4.2"
mockall = "0.11.4"
env_logger = { version = "0.10.0", features = ["humantime"] }
log = "0.4.20"
